--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         env:
-          - {DOCKER_IMAGE: ros:rolling-ros1-bridge-focal, ROS_DISTRO: noetic}
+          - {ROS_DISTRO: noetic, ROS_REPO: testing}
     env:
       CCACHE_DIR: /github/home/.ccache # Directory for ccache (and how we enable ccache in industrial_ci)
     runs-on: ubuntu-latest
