--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,25 +5,11 @@ name: CI
 on: [push, pull_request] # on all pushes and PRs
 
 jobs:
-  industrial_ci:
-    strategy:
-      matrix:
-        env:
-          - {DOCKER_IMAGE: "ros:rolling-ros1-bridge-focal"}
-    # env:
-    #  CCACHE_DIR: /github/home/.ccache # Directory for ccache (and how we enable ccache in industrial_ci)
+  ros1_bridge:
     runs-on: ubuntu-latest
     container: ros:rolling-ros1-bridge-focal
     steps:
       - uses: actions/checkout@v2
-      # This step will fetch/store the directory used by ccache before/after the ci run
-      # - uses: actions/cache@v2
-      #   with:
-      #    path: ${{ env.CCACHE_DIR }}
-      #    key: ccache-${{ matrix.env.ROS_DISTRO }}-${{ matrix.env.ROS_REPO }}
-      # Run industrial_ci
-      #- uses: 'ros-industrial/industrial_ci@master'
-      #  env: ${{ matrix.env }}
       - name: Build ros1-bridge
         run: |
           source /opt/ros/noetic/setup.bash
