--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build ros1-bridge
         run: |
-          #source /opt/ros/noetic/setup.bash
+          source /opt/ros/noetic/setup.bash
           #source /opt/ros/rolling/local_setup.bash
           #colcon build --symlink-install --packages-select ros1_bridge --cmake-force-configure
-          pwd
-          echo "hellos"
-          ls /
-          echo "world"
-          ls /opt
-          echo "hello world"
-          ls /opt/ros
-          echo "harshi"
-          ls /opt/ros/noetic
