--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build ros1-bridge
         run: |
-          source /opt/ros/noetic/setup.bash
-          #source /opt/ros/rolling/local_setup.bash
-          #colcon build --symlink-install --packages-select ros1_bridge --cmake-force-configure
+          echo $ROS1_DISTRO
+          if [ -f /opt/ros/$ROS1_DISTRO/setup.bash ]; then
+            source /opt/ros/$ROS1_DISTRO/setup.bash
+            echo "file exists"
+          else
+            echo "file does not exist"
+          fi
+
