source not found

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Build ros1-bridge
         run: |
           echo $ROS1_DISTRO
-          if [ -f /opt/ros/$ROS1_DISTRO/setup.sh ]; then
-            source /opt/ros/$ROS1_DISTRO/setup.sh
+          if [ -f /opt/ros/$ROS1_DISTRO/setup.bash ]; then
+            . /opt/ros/$ROS1_DISTRO/setup.bash
             echo "file exists"
           else
             echo "file does not exist"
