--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,11 @@ jobs:
       - name: Build ros1-bridge
         run: |
           echo $ROS1_DISTRO
-          if [ -f /opt/ros/$ROS1_DISTRO/setup.bash ]; then
-            . /opt/ros/$ROS1_DISTRO/setup.bash
-            echo "file exists"
-          else
-            echo "file does not exist"
-          fi
+          echo $0
+          #if [ -f /opt/ros/$ROS1_DISTRO/setup.bash ]; then
+          #  . /opt/ros/$ROS1_DISTRO/setup.bash
+          #  echo "file exists"
+          #else
+          #  echo "file does not exist"
+          #fi
 
