--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,17 +7,17 @@ on: [push, pull_request] # on all pushes and PRs
 jobs:
   ros1_bridge:
     runs-on: ubuntu-latest
-    container: ros:rolling-ros1-bridge-focal
+    container:
+      image: ros:rolling-ros1-bridge-focal
     steps:
       - uses: actions/checkout@v2
       - name: Build ros1-bridge
         run: |
           echo $ROS1_DISTRO
-          echo $0
-          #if [ -f /opt/ros/$ROS1_DISTRO/setup.bash ]; then
-          #  . /opt/ros/$ROS1_DISTRO/setup.bash
-          #  echo "file exists"
-          #else
-          #  echo "file does not exist"
-          #fi
+          if [ -f /opt/ros/$ROS1_DISTRO/setup.bash ]; then
+           . /opt/ros/$ROS1_DISTRO/setup.bash
+           echo "file exists"
+          else
+           echo "file does not exist"
+          fi
 
