--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build ros1-bridge
         run: |
-          echo $ROS1_DISTRO
-          if [ -f /opt/ros/$ROS1_DISTRO/setup.bash ]; then
-           . /opt/ros/$ROS1_DISTRO/setup.bash
-           echo "file exists"
-          else
-           echo "file does not exist"
-          fi
+          chmod +x "${GITHUB_WORKSPACE}/build_bridge.sh "
+          "${GITHUB_WORKSPACE}/build_bridge.sh"
+
 
