--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build ros1-bridge
         run: |
-          chmod +x "${GITHUB_WORKSPACE}/build_bridge.sh "
-          "${GITHUB_WORKSPACE}/build_bridge.sh"
+          find . -name build_bridge.sh
+          #chmod +x "${GITHUB_WORKSPACE}/build_bridge.sh "
+          #"${GITHUB_WORKSPACE}/build_bridge.sh"
 
 
