--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     container:
       image: ${{ matrix.distro }}
     env:
-      CCACHE_DIR: "${{ github.workspace }}/.ccache"
+      CCACHE_DIR: "/home/runner/.ccache"
     steps:
       - uses: actions/checkout@v2
       - name: install ccache
@@ -32,6 +32,6 @@ jobs:
       - name: Build ros1-bridge
         run: |
           bash ./build_bridge.sh
-      # - name: Test ros1-bridge
-      #   run: |
-      #     bash ./test_bridge.sh
+      - name: Test ros1-bridge
+        run: |
+          bash ./test_bridge.sh
